# real-python

./: README.md
bldg-python-c-ext/: .gitignore  README.md  basic_fputs.c  build_ext.sh  fputsmodule.c  main.py  pyproject.toml  setup.py  test_fputs.py  verify_ext_build.sh
close-look-fastapi/: main.py  pyproject.toml  test_main.py
concurrency-async/async-getting-started/: README.md  example_1.py  example_2.py  pyproject.toml
concurrency-async/fibonacci_c/: CMakeLists.txt  README.md  build.sh  fibmodule.c  fibonacci_ext.py  install.sh  main.py  pyproject.toml  setup.py
concurrency-async/fibonacci_cffi/: .gitignore  CMakeLists.txt  README.md  build.sh  fibonacci.c  fibonacci_ctypes.py  main.py  pyproject.toml
concurrency-async/fibonacci_cython/: README.md  build_ext.sh  build_fib.sh  fibmodule.c  fibmodule.py  install_ext.sh  main.py  pyproject.toml  set_archflags.sh  setup.py
concurrency-async/image_processing/: .gitignore  README.md  build.sh  image_processing.py  pyproject.toml
concurrency-async/python-async-features/: example_3.py  example_4.py  example_5.py  example_6.py  main.py  pyproject.toml
concurrency-async/python-parallel-processing/: README.md  echo_benchmark.py  main.py  (+6 more)
fastapi-build-apis/: pyproject.toml
getting-started-fastapi/: main.py  pyproject.toml
loguru-simpler-logging/: README.md  custom_json_logging.py  customized_log_errors.py  debug_with_context.py  loguru_json_file.py  loguru_json_format.py  main.py  pyproject.toml
rest-apis-with-fast-api/: main.py  pyproject.toml
speed-up-python-with-concurrency/: main.py  pyproject.toml
(+50 files in other folders)
