[build-system]
requires = ["setuptools>=78.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bldg-python-c-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.0.2",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
]

[tool.setuptools]
ext-modules = [
    { name = "fputmodule.fputs", sources = ["fputsmodule.c"] }
]
