[project]
name = "close-look-fastapi"
version = "0.1.0"
description = "Code from the RealPython tutorial, 'A Close Look at a FastAPI Example Application'."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
    "pytest-watch>=4.2.0",
]
